Prevent scrolling bars to apear when giggle on mobile.
By adding overflow: hidden on calculator main tag.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -325,6 +325,7 @@ body {
 }
 
 .calculator {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
