--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,4 +1,6 @@
 .calculator {
+    overflow: hidden; // prevent scrolling bars on mobile when giggle.
+
     &__container {
         position: relative; // for animation when error.
 
